--- a/product.html
+++ b/product.html
@@ -280,7 +280,10 @@
             <!-- Gallery Column -->
             <div class="product-gallery">
                 <div class="main-image-wrapper" style="position:relative;">
-                    <img id="ppMainImg" src="${p.images && p.images[0] ? p.images[0] : ''}" alt="${p.name}" style="${(p.images && p.images.length) ? '' : 'display:none'}">
+                    <div class="zoom-container" style="position:relative; overflow:hidden;">
+                      <img id="ppMainImg" src="${p.images && p.images[0] ? p.images[0] : ''}" alt="${p.name}" style="${(p.images && p.images.length) ? '' : 'display:none'}; cursor: zoom-in; transition: transform 0.2s;">
+                      <div id="zoomLens" style="display:none; position:absolute; pointer-events:none; border:2px solid #3b82f6; border-radius:50%; width:120px; height:120px; background:rgba(59,130,246,0.08); z-index:10;"></div>
+                    </div>
                     <video id="ppMainVideo" controls autoplay loop playsinline muted style="display:none; width:100%; height:100%; object-fit:contain; position:absolute; top:0; left:0; background:#fff;"></video>
                     ${!(p.images && p.images.length) ? `<div style="font-size:8rem">${p.emoji}</div>` : ''}
                 </div>
