--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="topbar"><div class="container topbar__inner"><div class="topbar__left"><a href="index.html" class="toplink">â† Back to Store</a></div></div></div>
+  <div class="topbar"><div class="container topbar__inner"><div class="topbar__left"><a href="index.html" class="toplink"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> Back to Store</a></div></div></div>
 
   <header class="header">
     <div class="container header__inner">
