--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9N1CPZQ1HG');
+</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Shop — Lecomax</title>
@@ -410,7 +419,7 @@
           </div>
           <div class="contact-row">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-            <a href="mailto:lecomaxstore@gmail.com">lecomaxstore@gmail.com</a>
+            <a href="mailto:contact@lecomax.com">contact@lecomax.com</a>
           </div>
           <div class="contact-row">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
@@ -461,12 +470,9 @@
     </div>
   </aside>
 
-  <a href="https://wa.me/212699289568" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
-    <span class="whatsapp-pulse"></span>
-    <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor">
-      <path d="M12.012 2c-5.506 0-9.989 4.478-9.99 9.984a9.96 9.96 0 0 0 1.334 4.993L2 21.5l4.634-1.215a9.969 9.969 0 0 0 5.378 1.564h.004c5.505 0 9.988-4.478 9.989-9.985.001-2.666-1.037-5.174-2.922-7.06C17.198 2.919 14.69 1.88 12.012 2zm0 18.17a8.164 8.164 0 0 1-4.168-1.144l-.299-.177-3.098.812.827-3.018-.194-.309a8.176 8.176 0 0 1-1.253-4.354c.001-4.503 3.668-8.167 8.177-8.167 2.185 0 4.239.85 5.783 2.395 1.545 1.545 2.394 3.6 2.393 5.786.001 4.502-3.668 8.167-8.172 8.176zm4.476-6.13c-.246-.123-1.455-.718-1.68-.8s-.39-.123-.554.123-.636.8-.78.964-.287.185-.533.062a6.79 6.79 0 0 1-1.996-1.23c-.569-.496-.954-1.108-1.066-1.296-.112-.188-.012-.29.111-.412.111-.111.246-.287.369-.431.123-.143.164-.246.246-.41.082-.164.041-.308-.02-.431-.062-.123-.554-1.334-.76-1.826-.2-.486-.402-.419-.553-.427-.143-.007-.307-.009-.471-.009a.91.91 0 0 0-.656.308c-.226.246-.861.842-.861 2.052 0 1.21 0.882 2.38 1.005 2.544.123.164 1.734 2.648 4.201 3.713 1.673.722 2.013.578 2.373.538.563-.061 1.455-.595 1.66-1.169.205-.574.205-1.066.143-1.169-.061-.102-.225-.164-.471-.287z"/>
-    </svg>
-  </a>
+  <div class="tawk-custom-trigger" role="button" onclick="Tawk_API.toggle();" title="Chat with us">
+    <img src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/my%20photo.jfif" alt="Chat with us">
+  </div>
 
   <div class="product-modal-ent" id="productModal" aria-hidden="true">
     <div class="product-modal__backdrop" data-close="1"></div>
@@ -558,5 +564,24 @@
 
   <script src="interactions.js"></script>
   <script src="app.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+Tawk_API.onLoad = function(){
+    Tawk_API.hideWidget();
+};
+Tawk_API.onMinimize = function(){
+    Tawk_API.hideWidget();
+};
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6989024f1377141c38bccfd9/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
