--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,15 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9N1CPZQ1HG');
+</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy â€” Lecomax</title>
@@ -38,10 +47,23 @@
         <p>We use local storage to remember your cart items for your convenience.</p>
 
         <h3>Contact Us</h3>
-        <p>If you have questions about your data, contact lecomaxstore@gmail.com.</p>
+        <p>If you have questions about your data, contact contact@lecomax.com.</p>
       </div>
     </div>
   </section>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6989024f1377141c38bccfd9/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
 
