--- a/returns.html
+++ b/returns.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9N1CPZQ1HG');
+</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Returns & Exchanges — Lecomax</title>
@@ -49,7 +58,7 @@
             <p class="muted" style="margin-top:5px;">Contact our support team via WhatsApp or email to start your return process. Please include your order number.</p>
             <div style="margin-top: 15px;">
                  <a href="https://wa.me/212699289568" class="btn btn--primary" target="_blank">Chat on WhatsApp</a>
-                 <a href="mailto:lecomaxstore@gmail.com" class="btn btn--ghost" style="margin-left: 10px;">Email Support</a>
+                 <a href="mailto:contact@lecomax.com" class="btn btn--ghost" style="margin-left: 10px;">Email Support</a>
             </div>
         </div>
       </div>
@@ -70,5 +79,18 @@
   <script>
       document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6989024f1377141c38bccfd9/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
