--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="modal.css" />
   <link rel="stylesheet" href="newsletter.css" />
 </head>
-<body>
+<body class="page-home">
   <div class="topbar">
     <div class="container topbar__inner">
       <div class="topbar__left">
