--- a/index.html
+++ b/index.html
@@ -480,6 +480,44 @@
               <button class="trending__add-btn" aria-label="Add to cart">ADD TO CART</button>
             </div>
           </li>
+          <li class="trending__card" data-id="wireless_gaming_controller_v2">
+            <div class="trending__img-wrap">
+              <img src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/2.avif" alt="Interactive Screen Wireless Gaming Controller" class="trending__img" />
+            </div>
+            <div class="trending__info">
+              <div class="trending__title-row">
+                <span class="trending__title-product">Interactive Screen Wireless Gaming Controller</span>
+              </div>
+              <div class="trending__price-row">
+                <span class="trending__price-old">700 MAD</span>
+                <span class="trending__price-new">600 MAD</span>
+              </div>
+              <div class="trending__rating">
+                <span class="trending__stars" aria-label="5.0 out of 5 stars">★★★★★</span>
+                <span class="trending__rating-value">5.0</span>
+              </div>
+              <button class="trending__add-btn" aria-label="Add to cart">ADD TO CART</button>
+            </div>
+          </li>
+          <li class="trending__card" data-id="baasploa_running_shoes">
+            <div class="trending__img-wrap">
+              <img src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/Baasploashoes/light%20gray%201.avif" alt="Baasploa Men's Lightweight Running Shoes" class="trending__img" />
+            </div>
+            <div class="trending__info">
+              <div class="trending__title-row">
+                <span class="trending__title-product">Baasploa Men's Lightweight Running Shoes</span>
+              </div>
+              <div class="trending__price-row">
+                <span class="trending__price-old">300 MAD</span>
+                <span class="trending__price-new">250 MAD</span>
+              </div>
+              <div class="trending__rating">
+                <span class="trending__stars" aria-label="4.8 out of 5 stars">★★★★☆</span>
+                <span class="trending__rating-value">4.8</span>
+              </div>
+              <button class="trending__add-btn" aria-label="Add to cart">ADD TO CART</button>
+            </div>
+          </li>
           <!-- Add more product cards here as needed -->
         </ul>
       </div>
