--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="video" href="https://www.dropbox.com/scl/fi/ijjlsh5g0qtz1txe075sp/1770625431125.mp4?rlkey=977tuc0zdeav4eqa2igf6e12g&st=h27cyv00&raw=1">
+  <link rel="preload" as="video" href="https://www.dropbox.com/scl/fi/ijjlsh5g0qtz1txe075sp/1770625431125.mp4?rlkey=977tuc0zdeav4eqa2igf6e12g&st=h27cyv00&raw=1" fetchpriority="high">
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="card-enhancements.css" />
   <link rel="stylesheet" href="modal.css" />
@@ -62,7 +62,7 @@
   <div id="home-view">
     <header class="header" id="header">
     <div class="container header__inner">
-      <a class="brand" href="#">
+      <a class="brand" href="index.html">
         <span class="brand__name"><span style="color:var(--accent)">L'</span>ECOMAX</span>
       </a>
 
@@ -227,13 +227,78 @@
           <div class="slider__track" id="sliderTrack">
             <!-- Server-Side Rendered Slide for Speed -->
             <div class="slide" style="background: transparent; padding: 0; display: flex; flex-direction: column; gap: 24px; border: none; align-items: center;">
-              <video src="https://www.dropbox.com/scl/fi/ijjlsh5g0qtz1txe075sp/1770625431125.mp4?rlkey=977tuc0zdeav4eqa2igf6e12g&amp;st=h27cyv00&amp;raw=1" autoplay loop muted playsinline preload="auto"></video>
-              <div>
-                <a href="#products" class="hero-cta" data-i18n="shop_now">
-                  Shop Now
-                  <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+              <video 
+                src="https://www.dropbox.com/scl/fi/ijjlsh5g0qtz1txe075sp/1770625431125.mp4?rlkey=977tuc0zdeav4eqa2igf6e12g&st=h27cyv00&raw=1" 
+                autoplay 
+                loop 
+                muted 
+                playsinline 
+                preload="auto" 
+                fetchpriority="high"
+                style="background-color: #0b1220; object-fit: cover; border-radius: 20px;"
+              ></video>
+              <div style="width: 100%; display: flex; justify-content: center; gap: 20px; margin-top: -10px;">
+                <a href="#products" class="hero-btn primary">
+                  Shop Collection
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
+                </a>
+                <a href="#trending" class="hero-btn secondary">
+                  Trending Now
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.1.2-2.2.5-3.3.3.8.7 1.8 1.5 2.8z"/></svg>
                 </a>
               </div>
+              <style>
+                .hero-btn {
+                  display: inline-flex;
+                  align-items: center;
+                  justify-content: center;
+                  gap: 14px;
+                  height: 56px;
+                  padding: 0 32px;
+                  border-radius: 100px;
+                  font-size: 0.85rem;
+                  font-weight: 800;
+                  text-transform: uppercase;
+                  letter-spacing: 0.1em;
+                  text-decoration: none;
+                  white-space: nowrap;
+                  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+                  position: relative;
+                  overflow: hidden;
+                  min-width: 200px;
+                }
+                .hero-btn.primary {
+                  background: #ffffff;
+                  color: #000;
+                  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+                  border: 1px solid #ffffff;
+                }
+                .hero-btn.primary:hover {
+                  transform: translateY(-4px);
+                  box-shadow: 0 20px 40px rgba(255, 255, 255, 0.25);
+                }
+                .hero-btn.secondary {
+                  background: rgba(15, 23, 42, 0.6);
+                  backdrop-filter: blur(16px);
+                  -webkit-backdrop-filter: blur(16px);
+                  color: #fff;
+                  border: 1px solid rgba(255, 255, 255, 0.15);
+                  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+                }
+                .hero-btn.secondary:hover {
+                    background: rgba(15, 23, 42, 0.85);
+                    border-color: rgba(255, 255, 255, 0.3);
+                    transform: translateY(-4px);
+                }
+                @media (max-width: 480px) {
+                  .hero-btn { 
+                    height: 48px; 
+                    padding: 0 24px; 
+                    font-size: 0.8rem; 
+                    min-width: 160px;
+                  }
+                }
+              </style>
             </div>
           </div>
           <div class="slider__dots" id="sliderDots" aria-label="Dots"></div>
@@ -440,7 +505,7 @@
   <!-- NEW TRENDING SECTION (Horizontal Scroll) -->
 
   <!-- PREMIUM TRENDING CAROUSEL -->
-  <section class="trending">
+  <section class="trending" id="trending">
     <div class="trending__head">
       <h2 class="trending__title" data-i18n="trending">Trending Now</h2>
       <p class="trending__subtitle" data-i18n="trending_sub">Top picks selected for you.</p>
@@ -769,12 +834,20 @@
         </a>
         <p class="foot-desc" data-i18n="footer_desc">Elevate your everyday with curated premium essentials. Experience the perfect blend of modern style and uncompromising quality, delivered directly to you.</p>
         <div class="social-links">
-           <a href="#" aria-label="Instagram" class="social-btn instagram">
+           <a href="https://www.instagram.com/lecomax.com" target="_blank" aria-label="Instagram" class="social-btn instagram">
              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
            </a>
 
-           <a href="#" aria-label="Facebook" class="social-btn facebook">
-             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+           <a href="https://www.facebook.com/lecomax.com" target="_blank" aria-label="Facebook" class="social-btn facebook">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path></svg>
+           </a>
+
+           <a href="https://www.tiktok.com/@lecomax.com" target="_blank" aria-label="TikTok" class="social-btn tiktok">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"></path></svg>
+           </a>
+
+           <a href="https://x.com/lecomax.com" target="_blank" aria-label="X (Twitter)" class="social-btn x-twitter">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"></path></svg>
            </a>
         </div>
         <p class="muted copyright">© <span id="year">2026</span> <span data-i18n="rights">Lecomax. All rights reserved.</span></p>
